--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Reveal.js 3 Slide Demo</title>
-	<link rel="stylesheet" href="css/reveal.min.css">
-	<link rel="stylesheet" href="css/theme/default.css" id="theme">	
+	<link rel="stylesheet" href="css/reveal.css">
+	<link rel="stylesheet" href="css/theme/solarized.css" id="theme">	
 	<!--Add support for earlier versions of Internet Explorer -->
 	<!--[if lt IE 9]>
 	<script src="lib/js/html5shiv.js"></script>
@@ -38,7 +38,7 @@
 			</div>
 	</div>
 	<script src="lib/js/head.min.js"></script>
-	<script src="js/reveal.min.js"></script>
+	<script src="js/reveal.js"></script>
  
 	<script>
 		// Required, even if empty.
