--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">	
 <head>
 	<meta charset="utf-8">
-	<title>Reveal.js 3 Slide Demo</title>
+	<title>C/C++</title>
 	<link rel="stylesheet" href="css/reveal.css">
 	<link rel="stylesheet" href="css/theme/solarized.css" id="theme">	
 	<!--Add support for earlier versions of Internet Explorer -->
