--- a/01/index.html
+++ b/01/index.html
@@ -47,6 +47,11 @@
                 { src: '../plugin/notes/notes.js' }
             ]
         });
+	var link = document.createElement( 'link' );
+	link.rel = 'stylesheet';
+	link.type = 'text/css';
+	link.href = window.location.search.match( /print-pdf/gi ) ? '../css/print/pdf.css' : '../css/print/paper.css';
+	document.getElementsByTagName( 'head' )[0].appendChild( link );
     </script>
 </body>
 </html>
