--- a/01/index.html
+++ b/01/index.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8">
     <title>C/C++</title>
     <link rel="stylesheet" href="../css/reveal.css">
-    <link rel="stylesheet" href="../css/theme/white.css" id="theme">    
+    <!--link rel="stylesheet" href="../css/theme/white.css" id="theme"-->    
     <link rel="stylesheet" href="../lib/css/zenburn.css">    
     <!--Add support for earlier versions of Internet Explorer -->
     <!--[if lt IE 9]>
